# Form-ID

./: .gitignore  Readme.md
Frontend/: .gitignore  index.html  package-lock.json  package.json
Frontend/src/: App.jsx  Main.css  main.jsx
Frontend/src/components/: CardForm.jsx  Home.jsx  LogForm.jsx  Login.jsx  Nav.jsx  Notification.jsx
backend/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
backend/app/: app.py  auth.py  auth_test_file.py
backend/app/databases/: db.py  mongo.py
backend/app/model/: model.py
backend/app/schema/: schema.py
